# A-Minecraft-Clone

./: .gitignore  AMinecraftClone.sln  CMakeLists.txt  README.md
AMinecraftClone/: AABB.cpp  AABB.h  AMinecraftClone.vcxproj  AMinecraftClone.vcxproj.filters  AudioManager.cpp  AudioManager.h  Block.cpp  Block.h  Button.cpp  Button.h  CMakeLists.txt  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkBorder_vert.glsl  ChunkGenerator.cpp  ChunkGenerator.h  ChunkProvider.cpp  ChunkProvider.h  CombinedNoise.h  Entity.cpp  Entity.h  Game.cpp  Game.h  InventoryItem.cpp  InventoryItem.h  Item.cpp  ItemDisplayer.cpp  Level.cpp  Level.h  Main.cpp  MainMenuScreen.cpp  MenuButtons.h  Model.cpp  Model.h  NoiseGeneratorOctave.h  NoiseGeneratorOctave2.cpp  NoiseGeneratorOctave2.h  NoiseGeneratorOctave3.cpp  (+53 more)
AMinecraftClone/Compiled/: imgui.ini
AMinecraftClone/Compiled/Shaders/: ChunkBorder_Frag.glsl  CloudsShader_Frag.glsl  CloudsShader_Vert.glsl  InventoryItem_Frag.glsl  InventoryItem_Vert.glsl  MainMenuBackground_Frag.glsl  MainMenuBackground_Vert.glsl  OpaqueShader_Frag.glsl  OpaqueShader_Vert.glsl  PlantsShader_Frag.glsl  SkyShader_Frag.glsl  SkyShader_Vert.glsl  TempPlayersShader_Vert.glsl  TextShader_Frag.glsl  TextShader_Vert.glsl  UIShader_Frag.glsl  UIShader_Vert.glsl  WaterShader_Frag.glsl
AMinecraftClone/Headers/: AABB.h  AudioManager.h  Block.h  Chunk.h  ChunkGenerator.h  ChunkProvider.h  DebugRenderer.h  DebugUIManager.h  Entity.h  Game.h  ImageDisplayer.h  Item.h  ItemDisplayer.h  Level.h  MainMenuScreen.h  MathHelper.h  MenuButtons.h  NetworkingManager.h  Noise.h  NoiseGeneratorOctave.h  NoiseGeneratorOctave2.h  OctaveNoise.h  OptionsMenu.h  PauseMenu.h  Player.h  PlayerHUDScreen.h  PlayerInventory.h  SafeQueue.h  SavesMenu.h  Shader.h  TerrainGen_1.h  TerrainGen_2.h  TerrainGen_3.h  TextDisplayer.h  Texture.h  ThreadPool.h  UIManager.h  UIScreen.h  Utilities.h  Widget.h  (+3 more)
AMinecraftClone/Src/: AudioManager.cpp  Block.cpp  Chunk.cpp  ChunkGenerator.cpp  ChunkProvider.cpp  CombinedNoise.cpp  DebugRenderer.cpp  DebugUIManager.cpp  Entity.cpp  Game.cpp  ImageDisplayer.cpp  ItemDisplayer.cpp  Main.cpp  MainMenuScreen.cpp  MathHelper.cpp  MenuButtons.cpp  Model.cpp  NetworkingManager.cpp  NoiseGeneratorOctave.cpp  NoiseGeneratorOctave2.cpp  NoiseGeneratorOctave3.cpp  NoiseGeneratorPerlin.cpp  OptionsMenu.cpp  PauseMenu.cpp  Player.cpp  PlayerHUDScreen.cpp  PlayerInventory.cpp  SavesMenu.cpp  Shader.cpp  SkyManager.cpp  TerrainGen_1.cpp  TerrainGen_2.cpp  TerrainGen_3.cpp  TextDisplayer.cpp  Texture.cpp  ThreadPool.cpp  UIManager.cpp  UIScreen.cpp  Utilities.cpp  Window.cpp  (+2 more)
Server/: Server.vcxproj
Server/Src/: Main.cpp
